--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.MINICAP"
         tools:targetApi="31">
         <activity
+            android:name=".view.ModifyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.EditActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.StatsActivity"
             android:exported="false" />
         <activity
